--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -18,7 +18,7 @@
         <li class="nav-item">
           <a class="nav-link {{#if active_home}}active{{/if}}" href="/">Home</a>
         </li>           
-        <li class="nav-item">
+        {{!-- <li class="nav-item">
           <a class="nav-link {{#if active_u12}}active{{/if}}" href="/inv/u12/va01">Under 12</a>
         </li>
         <li class="nav-item dropdown">
@@ -37,21 +37,35 @@
             <a class="dropdown-item" href="/inv/u18/va12">VA12</a>
             <a class="dropdown-item" href="/inv/u18/va13">VA13</a>
           </div>
+        </li> --}}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle {{#if active_libera_f}}active{{/if}}" data-toggle="dropdown" href="#">Libera F.</a>
+          <div class="dropdown-menu mb-3">
+            <h6 class="dropdown-header">Invernale</h6>
+            <a class="dropdown-item" href="/inv/libera-f/va11"><strong>VA11</strong></a>
+            <a class="dropdown-item" href="/inv/libera-f/va12">VA12</a>
+            {{!-- <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/libera-f/va17"><strong>VA17</strong></a>
+            <a class="dropdown-item" href="/prim/libera-f/va18">VA18</a>
+            <a class="dropdown-item" href="/prim/libera-f/va19">VA19</a> --}}
+          </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle {{#if active_libera}}active{{/if}}" data-toggle="dropdown" href="#">Libera Mista</a>
           <div class="dropdown-menu mb-3">
             <h6 class="dropdown-header">Invernale</h6>
-            <a class="dropdown-item" href="/inv/libera-mista/va18"><strong>VA18</strong></a>
-            <a class="dropdown-item" href="/inv/libera-mista/va19">VA19</a>
-            <a class="dropdown-item" href="/inv/libera-mista/va20">VA20</a>
-            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/inv/libera-mista/va13">VA13</a>
+            <a class="dropdown-item" href="/inv/libera-mista/va14">VA14</a>
+            <a class="dropdown-item" href="/inv/libera-mista/va15"><strong>VA15</strong></a>
+            {{!-- <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
             <a class="dropdown-item" href="/prim/libera-mista/va17"><strong>VA17</strong></a>
             <a class="dropdown-item" href="/prim/libera-mista/va18">VA18</a>
-            <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a>
+            <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a> --}}
           </div>
         </li>
+
       </ul>
     </div>
   </div>
