full update for 22/23 season

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -32,6 +32,6 @@
     <div class="container text-center">
     <h2 class="font-weight-normal">Polisportiva <span style="color:#9B2F36;">S</span>anti <span style="color:#9B2F36;">A</span>postoli</h2>
     <br/>
-    <p>La Polisportiva Santi Apostoli Volley condivide pienamente il progetto educativo e pastorale parrocchiale per la crescita e la formazione dei ragazzi e dei giovani nello sport in oratorio, aiutandoli a comprendere che lo sport non è solo educazione fisica, ma soprattutto educazione, rispetto, accoglienza e spirito di gruppo. Facciamo parte dell’ Associazione Nazionale Polisportive Giovanili Salesiane, P.G.S., ente nazionale di promozione sportiva riconosciuta dal CONI.</p>
+    <p>La Polisportiva Santi Apostoli Volley condivide pienamente il progetto educativo e pastorale parrocchiale per la crescita e la formazione dei ragazzi e dei giovani nello sport in oratorio, aiutandoli a comprendere che lo sport non è solo educazione fisica, ma soprattutto educazione, rispetto, accoglienza e spirito di gruppo. Facciamo parte dell’ Associazione Nazionale Polisportive Giovanili Salesiane (P.G.S.), ente nazionale di promozione sportiva riconosciuta dal CONI.</p>
     </div>
 </section>
