--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,11 +1,11 @@
-<div class="alert alert-primary fade show text-center rounded-0 mb-0" role="alert">
+{{!-- <div class="alert alert-primary fade show text-center rounded-0 mb-0" role="alert">
     <h5 class="d-inline"><span class="badge badge-primary"><i class="fa fa-arrow-right"></i></span></h5>
 	<a style="color:black" href="https://enigmatic-escarpment-16941.herokuapp.com/">Stagione <strong>18/19</strong></a>
-</div>
+</div> --}}
 <!-- Footer -->
 
 <footer class="py-4">
     <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Santi Apostoli 2019</p>
+    <p class="m-0 text-center text-white">Copyright &copy; Santi Apostoli 2022</p>
     </div>
 </footer>
