--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -18,10 +18,13 @@
         <li class="nav-item">
           <a class="nav-link {{#if active_home}}active{{/if}}" href="/">Home</a>
         </li>           
-        {{!-- <li class="nav-item">
-          <a class="nav-link {{#if active_u12}}active{{/if}}" href="/inv/u12/va01">Under 12</a>
+        <li class="nav-item">
+          <a class="nav-link {{#if active_u13}}active{{/if}}" href="/inv/u13/va02">Under 13</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item">
+          <a class="nav-link {{#if active_u20}}active{{/if}}" href="/inv/u20/va09">Under 20</a>
+        </li>
+        {{!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle {{#if active_u14}}active{{/if}}" data-toggle="dropdown" href="#">Under 14</a>
           <div class="dropdown-menu">
             <h6 class="dropdown-header">Invernale</h6>
