--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,13 +7,13 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('/img/img-2.jpg')">
+        <div class="carousel-item active" style="background-image: url('/img/img-3.jpg')">
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('/img/img-1.jpg')">
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('/img/img-3.jpg')">
+        <div class="carousel-item" style="background-image: url('/img/img-2.jpg')">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -32,6 +32,6 @@
     <div class="container text-center">
     <h2 class="font-weight-normal">Polisportiva <span style="color:#9B2F36;">S</span>anti <span style="color:#9B2F36;">A</span>postoli</h2>
     <br/>
-    <p>La Polisportiva Santi Apostoli Volley condivide pienamente il progetto educativo e pastorale parrocchiale per la crescita e la formazione dei ragazzi e dei giovani nello sport in oratorio, aiutandoli a comprendere che lo sport non è solo educazione fisica, ma soprattutto educazione, rispetto, accoglienza e spirito di gruppo. Facciamo parte dell’ Associazione Nazionale Polisportive Giovanili Salesiane (P.G.S.), ente nazionale di promozione sportiva riconosciuta dal CONI.</p>
+    <p>La Polisportiva Santi Apostoli Volley condivide pienamente il progetto educativo e pastorale parrocchiale per la crescita e la formazione dei ragazzi e dei giovani nello sport in oratorio, aiutandoli a comprendere che lo sport non è solo educazione fisica, ma soprattutto educazione, rispetto, accoglienza e spirito di gruppo. Facciamo parte dell’ Associazione Nazionale Polisportive Giovanili Salesiane (<b>P</b>.<b>G</b>.<b>S</b>.), ente nazionale di promozione sportiva riconosciuta dal CONI.</p>
     </div>
 </section>
