--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -54,7 +54,7 @@
             <a class="dropdown-item" href="/prim/libera-f/va19">VA19</a> --}}
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown mb-2 mb-lg-0">
           <a class="nav-link dropdown-toggle {{#if active_libera}}active{{/if}}" data-toggle="dropdown" href="#">Libera Mista</a>
           <div class="dropdown-menu mb-3">
             <h6 class="dropdown-header">Invernale</h6>
