--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -42,7 +42,7 @@
           </div>
         </li> --}}
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle {{#if active_libera_f}}active{{/if}}" data-toggle="dropdown" href="#">Libera F.</a>
+          <a class="nav-link dropdown-toggle {{#if active_libera_f}}active{{/if}}" data-toggle="dropdown" href="#">Libera Femminile</a>
           <div class="dropdown-menu mb-3">
             <h6 class="dropdown-header">Invernale</h6>
             <a class="dropdown-item" href="/inv/libera-f/va11"><strong>VA11</strong></a>
