--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -82,6 +82,13 @@
     {{#if table}}<script type="text/javascript" src="/js/iOS-utils.js"></script>{{/if}}
     {{#if altri}}<script type="text/javascript" src="/js/altri.js"></script>{{/if}}
     {{#if athletes}}<script type="text/javascript" src="/js/atleti.js"></script>{{/if}}
+    <script>
+        window.addEventListener('load', () => {
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js');
+        }
+        });
+    </script>
 
 </body>
 </html>
