--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,7 @@
     
     <!-- Icons for iOS that doesn't support the manifest -->
     <meta name="apple-mobile-web-app-title" content="S. Apostoli"/> <!-- Title if added to home page iOS -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="/icons/icon.png">
 
     <!-- Splash screen for iOS, for more info https://appsco.pe/developer/splash-screens -->
