footer changed, iOS fix

--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -4,8 +4,8 @@
 </div> --}}
 <!-- Footer -->
 
-<footer class="py-4">
-    <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Santi Apostoli 2022</p>
+<footer>
+    <div class="container d-flex h-100">
+    <p class="m-0 w-100 align-self-center text-center text-white">Copyright &copy; Santi Apostoli 2022</p>
     </div>
 </footer>
