--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,18 @@
     src: url(../fonts/Calligraphy.ttf);
 }
 html{
-	background-color: #f2f2f2;
+	background-color: #222A59;
+	position: relative;
+	min-height: 100%;
+}
+body {
+	margin-bottom: 60px; /* Margin bottom for footer height */
+}
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px; /* Set the fixed height of the footer here */
 }
 .navbar-brand {
 	font-family: Calligraphy;
