--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -28,7 +28,7 @@
 </header>
 
 <!-- Page Content -->
-<section class="py-5">
+<section class="py-5 bg-light">
     <div class="container text-center">
     <h2 class="font-weight-normal">Polisportiva <span style="color:#9B2F36;">S</span>anti <span style="color:#9B2F36;">A</span>postoli</h2>
     <br/>
