title small fix

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,11 +1,11 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark py-0">
   <div class="container">
-    <a class="navbar-brand" href="/">
-      <img id="logo" style="width: 64px;" src="/icons/og/transparent-bg.png" alt="Santi Apostoli Logo"/>
-      <span class="d-sm-none">S.Apostoli</span>
-      <span class="d-none d-sm-inline">Santi Apostoli</span>
-      <small class="subtitle d-none d-sm-inline">Pietro e Paolo</small>
+    <a class="navbar-brand d-flex" href="/">
+      <img id="logo" style="width: 64px;" src="/icons/og/transparent-bg.png" alt="Santi Apostoli Logo">
+      <span class="d-sm-none my-auto">S. Apostoli</span>
+      <span class="d-none d-sm-inline my-auto">Santi Apostoli</span>
+      <span class="subtitle d-none d-sm-inline my-auto pl-1">Pietro e Paolo</span>
     </a>
 
     <!-- Collapse navbar button -->
