--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,13 +8,13 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('/img/old (1).jpg')">
+        <div class="carousel-item active" style="background-image: url('/img/old_1.jpg')">
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('/img/old (2).jpg')">
+        <div class="carousel-item" style="background-image: url('/img/old_2.jpg')">
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('/img/old (3).jpg')">
+        <div class="carousel-item" style="background-image: url('/img/old_3.jpg')">
         </div>
     </div>
 
@@ -39,13 +39,13 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('/img/img (1).jpg')">
+        <div class="carousel-item active" style="background-image: url('/img/img_1.jpg')">
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('/img/img (2).jpg')">
+        <div class="carousel-item" style="background-image: url('/img/img_2.jpg')">
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('/img/img (3).jpg')">
+        <div class="carousel-item" style="background-image: url('/img/img_3.jpg')">
         </div>
     </div>
 
