--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -21,8 +21,14 @@
         <li class="nav-item">
           <a class="nav-link {{#if active_u13}}active{{/if}}" href="/inv/u13/va02">Under 13</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link {{#if active_u20}}active{{/if}}" href="/inv/u20/va09">Under 20</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle {{#if active_u20}}active{{/if}}" data-toggle="dropdown" href="#">Under 20</a>
+          <div class="dropdown-menu mb-3">
+            <h6 class="dropdown-header">Invernale</h6>
+            <a class="dropdown-item" href="/inv/u20/va09"><strong>VA09</strong></a>
+            <a class="dropdown-item" href="/inv/u20/va10">VA10</a>
+          </div>
         </li>
         {{!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle {{#if active_u14}}active{{/if}}" data-toggle="dropdown" href="#">Under 14</a>
