--- a/views/table.handlebars
+++ b/views/table.handlebars
@@ -7,6 +7,16 @@
 	</button>
 </div>
 {{/if}}
+{{#if va04}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va04.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U13 nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
 {{#if va09}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
@@ -16,6 +26,16 @@
 	</button>
 </div>
 {{/if}}
+{{#if va12}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va12.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U20 nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
 {{#if va11}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
@@ -25,6 +45,16 @@
 	</button>
 </div>
 {{/if}}
+{{#if va13}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va13.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA FEMMINILE nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
 {{#if va15}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
@@ -34,6 +64,16 @@
 	</button>
 </div>
 {{/if}}
+{{#if va17}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va17.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA MISTA nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
 <ul class="nav nav-tabs nav-justified" id="myTab">
 	<li class="nav-item">
 		<a class="nav-link active" id="calendar-tab" data-toggle="tab" href="#calendar" role="tab">Calendario</a>
