--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -26,6 +26,7 @@
             <a class="dropdown-item" href="/inv/u13/va02"><strong>VA02</strong></a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/u13/va03">VA03</a>
             <a class="dropdown-item" href="/prim/u13/va04"><strong>VA04</strong></a>
           </div>
         </li>
@@ -67,6 +68,8 @@
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
             <a class="dropdown-item" href="/prim/libera-f/va13"><strong>VA13</strong></a>
+            <a class="dropdown-item" href="/prim/libera-f/va14">VA14</a>
+            <a class="dropdown-item" href="/prim/libera-f/va15">VA15</a>
             {{!-- <a class="dropdown-item" href="/prim/libera-f/va18">VA18</a>
             <a class="dropdown-item" href="/prim/libera-f/va19">VA19</a> --}}
           </div>
@@ -80,7 +83,9 @@
             <a class="dropdown-item" href="/inv/libera-mista/va15"><strong>VA15</strong></a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/libera-mista/va16">VA16</a>
             <a class="dropdown-item" href="/prim/libera-mista/va17"><strong>VA17</strong></a>
+            <a class="dropdown-item" href="/prim/libera-mista/va18">VA18</a>
             {{!-- <a class="dropdown-item" href="/prim/libera-mista/va18">VA18</a>
             <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a> --}}
           </div>
