--- a/views/table.handlebars
+++ b/views/table.handlebars
@@ -1,7 +1,7 @@
-{{#if va04}}
+{{#if va05}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
-	<a style="color:black" href="/ics/va04.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U13 nel tuo calendario!</a>
+	<a style="color:black" href="/ics/va05.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U13 nel tuo calendario!</a>
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 	</button>
@@ -11,7 +11,7 @@
 {{#if va12}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
-	<a style="color:black" href="/ics/va12.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U20 nel tuo calendario!</a>
+	<a style="color:black" href="/ics/va12.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA FEMMINILE nel tuo calendario!</a>
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 	</button>
@@ -28,10 +28,10 @@
 </div>
 {{/if}}
 
-{{#if va17}}
+{{#if va16}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
-	<a style="color:black" href="/ics/va17.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA MISTA nel tuo calendario!</a>
+	<a style="color:black" href="/ics/va16.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA MISTA nel tuo calendario!</a>
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 	</button>
