--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -22,45 +22,38 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle {{#if active_u14}}active{{/if}}" data-toggle="dropdown" href="#">Under 14</a>
           <div class="dropdown-menu mb-3">
-            <h6 class="dropdown-header">Invernale</h6>
+            {{!-- <h6 class="dropdown-header">Invernale</h6>
             <a class="dropdown-item" href="/inv/u14/va05">VA05</a>
             <a class="dropdown-item" href="/inv/u14/va06"><strong>VA06</strong></a>
-            {{!-- <div class="dropdown-divider"></div>
+            <div class="dropdown-divider"></div> --}}
             <h6 class="dropdown-header">Primaverile</h6>
-            <a class="dropdown-item" href="/prim/u14/va03">VA03</a>
-            <a class="dropdown-item" href="/prim/u14/va04"><strong>VA04</strong></a> --}}
+            <a class="dropdown-item" href="/prim/u14/va08"><strong>VA08</strong></a>
           </div>
         </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle {{#if active_libera_f}}active{{/if}}" data-toggle="dropdown" href="#">Libera Femminile</a>
           <div class="dropdown-menu mb-3">
-            <h6 class="dropdown-header">Invernale</h6>
+            {{!-- <h6 class="dropdown-header">Invernale</h6>
             <a class="dropdown-item" href="/inv/libera-f/va12"><strong>VA12</strong></a>
             <a class="dropdown-item" href="/inv/libera-f/va13"><strong>VA13</strong></a>
             <a class="dropdown-item" href="/inv/libera-f/va14">VA14</a>
             <a class="dropdown-item" href="/inv/libera-f/va15">VA15</a>
-            {{!-- <div class="dropdown-divider"></div>
+            <div class="dropdown-divider"></div> --}}
             <h6 class="dropdown-header">Primaverile</h6>
-            <a class="dropdown-item" href="/prim/libera-f/va13"><strong>VA13</strong></a>
-            <a class="dropdown-item" href="/prim/libera-f/va14">VA14</a>
-            <a class="dropdown-item" href="/prim/libera-f/va15">VA15</a> --}}
+            <a class="dropdown-item" href="/prim/libera-f/va18"><strong>VA18</strong></a>
           </div>
         </li>
         <li class="nav-item dropdown mb-2 mb-lg-0">
           <a class="nav-link dropdown-toggle {{#if active_libera}}active{{/if}}" data-toggle="dropdown" href="#">Libera Mista</a>
           <div class="dropdown-menu mb-3">
-            <h6 class="dropdown-header">Invernale</h6>
+            {{!-- <h6 class="dropdown-header">Invernale</h6>
             <a class="dropdown-item" href="/inv/libera-mista/va16"><strong>VA16</strong></a>
             <a class="dropdown-item" href="/inv/libera-mista/va17">VA17</a>
             <a class="dropdown-item" href="/inv/libera-mista/va18">VA18</a>
-            {{!-- <div class="dropdown-divider"></div>
+            <div class="dropdown-divider"></div> --}}
             <h6 class="dropdown-header">Primaverile</h6>
-            <a class="dropdown-item" href="/prim/libera-mista/va16">VA16</a>
-            <a class="dropdown-item" href="/prim/libera-mista/va17"><strong>VA17</strong></a>
-            <a class="dropdown-item" href="/prim/libera-mista/va18">VA18</a> --}}
-            {{!-- <a class="dropdown-item" href="/prim/libera-mista/va18">VA18</a>
-            <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a> --}}
+            <a class="dropdown-item" href="/prim/libera-mista/va20"><strong>VA20</strong></a>
           </div>
         </li>
 
