--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -53,7 +53,9 @@
             <a class="dropdown-item" href="/inv/libera-mista/va18">VA18</a>
             <div class="dropdown-divider"></div> --}}
             <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a>
             <a class="dropdown-item" href="/prim/libera-mista/va20"><strong>VA20</strong></a>
+            <a class="dropdown-item" href="/prim/libera-mista/va21">VA21</a>
           </div>
         </li>
 
