--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -6,6 +6,6 @@
 
 <footer>
     <div class="container d-flex h-100">
-    <p class="m-0 w-100 align-self-center text-center text-white">Copyright &copy; Santi Apostoli 2023</p>
+    <p class="m-0 w-100 align-self-center text-center text-white">Copyright &copy; Santi Apostoli 2024/25</p>
     </div>
 </footer>
