--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -49,9 +49,10 @@
           <a class="nav-link dropdown-toggle {{#if active_libera}}active{{/if}}" data-toggle="dropdown" href="#">Libera Mista</a>
           <div class="dropdown-menu mb-3">
             <h6 class="dropdown-header">Invernale</h6>
+            <a class="dropdown-item" href="/inv/libera-mista/va14">VA14</a>
+            <a class="dropdown-item" href="/inv/libera-mista/va15">VA15</a>
+            <a class="dropdown-item" href="/inv/libera-mista/va16">VA16</a>
             <a class="dropdown-item" href="/inv/libera-mista/va17"><strong>VA17</strong></a>
-            {{!-- <a class="dropdown-item" href="/inv/libera-mista/va17">VA17</a>
-            <a class="dropdown-item" href="/inv/libera-mista/va18">VA18</a> --}}
             {{!-- <div class="dropdown-divider"></div> --}}
             {{!-- <h6 class="dropdown-header">Primaverile</h6>
             <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a>
