added all calendars

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -19,17 +19,24 @@
           <a class="nav-link {{#if active_home}}active{{/if}}" href="/">Home</a>
         </li>           
 
-        {{!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle {{#if active_u14}}active{{/if}}" data-toggle="dropdown" href="#">Under 14</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle {{#if active_u13}}active{{/if}}" data-toggle="dropdown" href="#">Under 13</a>
           <div class="dropdown-menu mb-3">
             <h6 class="dropdown-header">Invernale</h6>
-            <a class="dropdown-item" href="/inv/u14/va05">VA05</a>
-            <a class="dropdown-item" href="/inv/u14/va06"><strong>VA06</strong></a>
-            <div class="dropdown-divider"></div>
-            <h6 class="dropdown-header">Primaverile</h6>
-            <a class="dropdown-item" href="/prim/u14/va08"><strong>VA08</strong></a>
+            <a class="dropdown-item" href="/inv/u13/va02"><strong>VA02</strong></a>
+            <a class="dropdown-item" href="/inv/u13/va03">VA03</a>
           </div>
-        </li> --}}
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle {{#if active_u16}}active{{/if}}" data-toggle="dropdown" href="#">Under 16</a>
+          <div class="dropdown-menu mb-3">
+            <h6 class="dropdown-header">Invernale</h6>
+            <a class="dropdown-item" href="/inv/u16/va06">VA06</a>
+            <a class="dropdown-item" href="/inv/u16/va07"><strong>VA07</strong></a>
+            <a class="dropdown-item" href="/inv/u16/va08">VA08</a>
+          </div>
+        </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle {{#if active_libera_f}}active{{/if}}" data-toggle="dropdown" href="#">Libera Femminile</a>
