--- a/views/table.handlebars
+++ b/views/table.handlebars
@@ -1,12 +1,22 @@
-{{!-- {{#if va05}}
+{{#if va02}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
-	<a style="color:black" href="/ics/va05.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U13 nel tuo calendario!</a>
+	<a style="color:black" href="/ics/va02.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U13 nel tuo calendario!</a>
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 	</button>
 </div>
-{{/if}} --}}
+{{/if}}
+
+{{#if va07}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va07.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U16 nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
 
 {{#if va12}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
