aggiunti calendari primaverili SA

--- a/views/table.handlebars
+++ b/views/table.handlebars
@@ -8,10 +8,30 @@
 </div>
 {{/if}}
 
+{{#if va03}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va03.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U13 nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
 {{#if va07}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
 	<a style="color:black" href="/ics/va07.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U16 nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
+{{#if va10}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va10.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli U16 nel tuo calendario!</a>
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 	</button>
@@ -41,7 +61,27 @@
 {{#if va17}}
 <div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
 	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
-	<a style="color:black" href="/ics/va16.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA MISTA nel tuo calendario!</a>
+	<a style="color:black" href="/ics/va17.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA FEMMINILE nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
+{{#if va18}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va18.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA FEMMINILE nel tuo calendario!</a>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+</div>
+{{/if}}
+
+{{#if va20}}
+<div class="alert alert-primary alert-dismissible fade show text-md-center rounded-0 mb-0" role="alert">
+	<h5 class="d-inline"><span class="badge badge-primary">New</span></h5>
+	<a style="color:black" href="/ics/va20.ics">&nbsp;<strong>Salva</strong> le partite dei S. Apostoli LIBERA MISTA nel tuo calendario!</a>
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 	</button>
