--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -25,6 +25,9 @@
             <h6 class="dropdown-header">Invernale</h6>
             <a class="dropdown-item" href="/inv/u13/va02"><strong>VA02</strong></a>
             <a class="dropdown-item" href="/inv/u13/va03">VA03</a>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/u13/va03"><strong>VA03</strong></a>
           </div>
         </li>
 
@@ -35,6 +38,9 @@
             <a class="dropdown-item" href="/inv/u16/va06">VA06</a>
             <a class="dropdown-item" href="/inv/u16/va07"><strong>VA07</strong></a>
             <a class="dropdown-item" href="/inv/u16/va08">VA08</a>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/u16/va10"><strong>VA10</strong></a>
           </div>
         </li>
 
@@ -44,11 +50,10 @@
             <h6 class="dropdown-header">Invernale</h6>
             <a class="dropdown-item" href="/inv/libera-f/va12"><strong>VA12</strong></a>
             <a class="dropdown-item" href="/inv/libera-f/va13"><strong>VA13</strong></a>
-            {{!-- <a class="dropdown-item" href="/inv/libera-f/va14">VA14</a>
-            <a class="dropdown-item" href="/inv/libera-f/va15">VA15</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
-            <a class="dropdown-item" href="/prim/libera-f/va18"><strong>VA18</strong></a> --}}
+            <a class="dropdown-item" href="/prim/libera-f/va17"><strong>VA17</strong></a>
+            <a class="dropdown-item" href="/prim/libera-f/va18"><strong>VA18</strong></a>
           </div>
         </li>
         
@@ -60,11 +65,9 @@
             <a class="dropdown-item" href="/inv/libera-mista/va15">VA15</a>
             <a class="dropdown-item" href="/inv/libera-mista/va16">VA16</a>
             <a class="dropdown-item" href="/inv/libera-mista/va17"><strong>VA17</strong></a>
-            {{!-- <div class="dropdown-divider"></div> --}}
-            {{!-- <h6 class="dropdown-header">Primaverile</h6>
-            <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">Primaverile</h6>
             <a class="dropdown-item" href="/prim/libera-mista/va20"><strong>VA20</strong></a>
-            <a class="dropdown-item" href="/prim/libera-mista/va21">VA21</a> --}}
           </div>
         </li>
 
