aggiunti anche altri gironi, download ics fixed

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -28,6 +28,8 @@
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
             <a class="dropdown-item" href="/prim/u13/va03"><strong>VA03</strong></a>
+            <a class="dropdown-item" href="/prim/u13/va04">VA04</a>
+            <a class="dropdown-item" href="/prim/u13/va05">VA05</a>
           </div>
         </li>
 
@@ -40,7 +42,9 @@
             <a class="dropdown-item" href="/inv/u16/va08">VA08</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/u16/va09">VA09</a>
             <a class="dropdown-item" href="/prim/u16/va10"><strong>VA10</strong></a>
+            <a class="dropdown-item" href="/prim/u16/va11">VA11</a>
           </div>
         </li>
 
@@ -52,6 +56,7 @@
             <a class="dropdown-item" href="/inv/libera-f/va13"><strong>VA13</strong></a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/libera-f/va16">VA16</a>
             <a class="dropdown-item" href="/prim/libera-f/va17"><strong>VA17</strong></a>
             <a class="dropdown-item" href="/prim/libera-f/va18"><strong>VA18</strong></a>
           </div>
@@ -67,7 +72,10 @@
             <a class="dropdown-item" href="/inv/libera-mista/va17"><strong>VA17</strong></a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Primaverile</h6>
+            <a class="dropdown-item" href="/prim/libera-mista/va19">VA19</a>
             <a class="dropdown-item" href="/prim/libera-mista/va20"><strong>VA20</strong></a>
+            <a class="dropdown-item" href="/prim/libera-mista/va21">VA21</a>
+            <a class="dropdown-item" href="/prim/libera-mista/va22">VA22</a>
           </div>
         </li>
 
